--- a/main.html
+++ b/main.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <style>
+        .moviePic {
+            height: 400px;
+            width: auto;
+            opacity: 0.8;
+        }
+        
+        .movieDetail {
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 60%;
+            margin: 0 auto;
+            text-align: center;
+            font-size: 18px;
+        }
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <img class="moviePic" src="./assets/Untitled.jpg" alt="Movie Poster">
+    <p class="movieDetail">Description of the movie goes here...</p>
 </body>
 
 </html>
